force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/geopointe__GP_Route_Plan_Optimization_History__c.object-meta.xml
<CustomObject>
    <label>GP Route Plan Optimization History</label>
    <nameField>
        <label>GP Route Plan Optimization History</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GP Route Plan Optimization Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>