force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/fields/geopointe__Freq_Num_Visits__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Freq_Num_Visits__c</fullName>
    <inlineHelpText>Number of visits per period.</inlineHelpText>
    <label>Target Frequency Visits Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>