force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/fields/geopointe__Map_Object__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Map_Object__c</fullName>
    <inlineHelpText>The name of the map object this Route Plan Optimization History is based upon.</inlineHelpText>
    <label>Map Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>