force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/fields/geopointe__Optimization_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Optimization_Date__c</fullName>
    <label>Optimization Date</label>
    <length>80</length>
    <type>Text</type>
</CustomField>