force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/fields/geopointe__Route_Plan__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Route_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Plan</label>
    <referenceTo>geopointe__GP_Route_Plan__c</referenceTo>
    <relationshipLabel>GP Route Plan Optimization History</relationshipLabel>
    <relationshipName>GP_Route_Plan_Optimization_History</relationshipName>
    <type>Lookup</type>
</CustomField>