force-app/main/default/objects/geopointe__GP_Route_Plan_Optimization_History__c/fields/geopointe__RPC_Freq_Num_Visits_Field__c.field-meta.xml
<CustomField>
    <fullName>geopointe__RPC_Freq_Num_Visits_Field__c</fullName>
    <inlineHelpText>Field used to store the number of visits per period based on a number field on the map object.</inlineHelpText>
    <label>Target Frequency Visits Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>